--- a/Subclass(looping).ipynb
+++ b/Subclass(looping).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHWePQh8/dlX0kMIzi6LTo",
+      "authorship_tag": "ABX9TyPoJiPjxHS9j4++M3/P8fRi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "\n",
         "  def build(self,input_shape):\n",
         "    self.w = self.add_weight(shape = (input_shape[-1],self.units))\n",
-        "    self.b = self.add_weight(shape = (self.units))\n",
+        "    self.b = self.add_weight(shape = (self.units,))\n",
         "\n",
         "  def call(self,inputs):\n",
         "    z = tf.matmul(inputs,self.w) + self.b\n",
